Added a fix for broken binding in mysql

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -g -Wall -fno-stack-protector
 #LDFLAGS = -lpthread
 
 
-all: test_simple_fork test_stack test_sleep test_pid test_sighandler test_sighandler_call test_pending_signals test_restore_signal test_altstack test_sigsuspend test_loop run_test set_state test_parent_child save_state test_thread test_wait test_my_mutex test_condvar test_pipe1 test_pipe2 test_terminal launcher test_runner test_cli_full test_cli test_serv state_present test_sockserver test_sockload test_fork test_tempfile
+all: test_simple_fork test_stack test_sleep test_pid test_sighandler test_sighandler_call test_pending_signals test_restore_signal test_altstack test_sigsuspend test_loop run_test set_state test_parent_child save_state test_thread test_wait test_my_mutex test_condvar test_pipe1 test_pipe2 test_terminal launcher test_runner test_cli_full test_cli test_serv state_present test_sockserver test_sockload test_fork test_tempfile test_bind
 
 syscalls.o: syscalls.S
 	as syscalls.S -o syscalls.o
@@ -83,6 +83,7 @@ test_sockserver: test_sockserver.o test.o
 test_sockload: test_sockload.o test.o
 test_fork: test_fork.o test.o clone.o
 test_tempfile: test_tempfile.o test.o
+test_bind: test_bind.o test.o
 #	gcc -static -o test_fork test_fork.o test.o #-lpthread
 
 #file_test.o: file_test.c
@@ -93,6 +94,7 @@ test_tempfile: test_tempfile.o test.o
 
 clean:
 	-rm *.o
+	-rm test_bind
 	-rm test_tempfile
 	-rm test_fork
 	-rm test_sockload
